TEST_PROGRAMS/INVALID_TYPECHECK/add_stringsandints.go
package main;

func main() {
    
    //this operation is not allowed
    var c int = 1;
    var x int = c+"hello";
    print(x);
}
